# qt-beginner-widget-examples

./: .gitignore  C++11.md  C++14.md  C++17.md  CMakeLists.txt  CMakeUserPresets.json  DLL Injection.md  Models.md  New  New_1  content.md  demo  last changes  main.cpp  per_user_recent_files_open_last_file_complete_implementation.cpp  settings.md  status.cpp  update delete
src/core/: Document.cpp  Document.h  FileManager.cpp  FileManager.h  SettingsManager.cpp  SettingsManager.h  UserManager.cpp  UserManager.h
src/ui/: CustomToolbar.cpp  CustomToolbar.h  CustomToolbar.ui  EditorWidget.cpp  EditorWidget.h  FindReplaceDialog.cpp  FindReplaceDialog.h  FindReplaceDialog.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SignupDialog.cpp  SignupDialog.h  SignupDialog.ui
